<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_background">

    <TextView
        android:id="@+id/confirm_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_25"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="0.01"
        android:text="@string/logout"
        android:textColor="?primaryTextColor"
        android:textSize="@dimen/size_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/poppins"
        android:letterSpacing="0.01"
        android:text="@string/are_you_sure_to_log_out"
        android:textColor="?primaryTextColor"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_title_tv" />


    <TextView
        android:id="@+id/no_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_15"
        android:background="@drawable/no_logout_btn_border"
        android:fontFamily="@font/poppins"
        android:letterSpacing="0.01"
        android:paddingTop="@dimen/margin_12"
        android:paddingBottom="@dimen/margin_12"
        android:text="@string/no"
        android:textAlignment="center"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/size_18sp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/yes_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_msg_tv" />

    <TextView
        android:id="@+id/yes_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_15"
        android:background="@drawable/rounded_login_btn_enabled"
        android:fontFamily="@font/poppins"
        android:letterSpacing="0.01"
        android:paddingTop="@dimen/margin_12"
        android:paddingBottom="@dimen/margin_12"
        android:text="@string/yes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/no_tv"
        app:layout_constraintTop_toBottomOf="@id/confirm_msg_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>