<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rectangle_for_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginTop="@dimen/margin_20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_for_login"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/create_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0.01"
                android:text="@string/create_account"
                android:textColor="?primaryTextColor"
                android:textSize="@dimen/size_28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/skip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/rounded_rectangle_flash_share"
                android:backgroundTint="?textEntryBackground"
                android:fontFamily="@font/poppins"
                android:letterSpacing="0.01"
                android:paddingStart="@dimen/margin_12"
                android:paddingTop="@dimen/margin_2"
                android:paddingEnd="@dimen/margin_12"
                android:paddingBottom="@dimen/margin_2"
                android:text="@string/skip"
                android:textColor="?colorPrimary"
                android:textSize="@dimen/size_14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/create_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/create_tv" />

            <TextView
                android:id="@+id/already_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0.01"
                android:text="@string/already_account"
                android:textColor="@color/grey_1"
                android:textSize="@dimen/size_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_tv" />

            <TextView
                android:id="@+id/login_here_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0.01"
                android:text="@string/login_here"
                android:textColor="?colorPrimary"
                android:textSize="@dimen/size_12"
                app:layout_constraintBaseline_toBaselineOf="@id/already_tv"
                app:layout_constraintStart_toEndOf="@id/already_tv" />


            <TextView
                android:id="@+id/countryTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_32"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0.01"
                android:text="@string/select_country"
                android:textColor="?secondaryTextColor"
                android:textSize="@dimen/size_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/already_tv" />

            <FrameLayout
                android:id="@+id/country_spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                app:layout_constraintTop_toBottomOf="@id/countryTv">

                <Spinner
                    android:id="@+id/country_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_et_background_selector"
                    android:padding="@dimen/margin_10"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_down_arrow"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/margin_10"/>

            </FrameLayout>


            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0.01"
                android:text="@string/name"
                android:textColor="?secondaryTextColor"
                android:textSize="@dimen/size_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country_spinner_layout" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/login_et_background_selector"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_name_here"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.01"
                android:padding="@dimen/margin_12"
                android:textColor="?primaryTextColor"
                android:textColorHint="@color/grey_1"
                android:textCursorDrawable="@drawable/cursor_drawable_for_login_sign_up"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_tv" />

            <ImageView
                android:id="@+id/warning_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:src="@drawable/ic_warning"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_et" />

            <TextView
                android:id="@+id/error_reason_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:textColor="@color/red_color"
                android:textSize="@dimen/size_12"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/warning_iv"
                app:layout_constraintStart_toEndOf="@id/warning_iv"
                app:layout_constraintTop_toTopOf="@id/warning_iv" />

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/poppins_medium"
                android:letterSpacing="0.01"
                android:text="@string/password"
                android:textColor="?secondaryTextColor"
                android:textSize="@dimen/size_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/warning_iv" />


            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/login_et_background_selector"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:letterSpacing="0.01"
                android:padding="@dimen/margin_12"
                android:textColor="?primaryTextColor"
                android:textColorHint="@color/grey_1"
                android:textCursorDrawable="@drawable/cursor_drawable_for_login_sign_up"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_tv" />

            <ImageView
                android:id="@+id/username_warning_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:src="@drawable/ic_warning"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_et" />

            <TextView
                android:id="@+id/username_error_reason_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:letterSpacing="0.01"
                android:singleLine="true"
                android:textColor="@color/red_color"
                android:textSize="@dimen/size_12"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/username_warning_iv"
                app:layout_constraintStart_toEndOf="@id/username_warning_iv"
                app:layout_constraintTop_toTopOf="@id/username_warning_iv" />

            <TextView
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@drawable/rounded_rectangle_for_login_btn"
                android:letterSpacing="0.01"
                android:padding="@dimen/margin_12"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_et" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>